# fastapi-tut

./: .pylintrc  Pipfile  README.md  body_and_validations.py  data_types.py  example_data.py  main.py  pyproject.toml
