[tool.poetry]
name = "fastapi-tut"
version = "0.1.0"
description = "FastAPI Tutorial"
authors = ["fitzypop <fitzypop@pm.me>"]
license = "Unlicensed"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.0"}

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
coverage = "^5.5"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
